--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
                 <p class="gray-color">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore maiores quaerat cupiditate? Dolor minima provident a assumenda eligendi dolores laudantium nesciunt, temporibus debitis quaerat? Sit quasi tempore odit dolores quo.</p>
                 <a class="section-one-link" href="#">Explore More</a>
             </article>
-            <article class="section-one-image">
-                <img src="images/mountains-gf92d8b096_1920.jpg" alt="">
-                <article id="section-one-icon">
-                    <img src="images/icon.png" alt="">
-                </article>
+            <article class="section-one-video">
+                <iframe style="border-radius: 10px;" width="500" height="315" src="https://www.youtube.com/embed/MW0KyrwlYDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
         </section>
         <section class="section-two">
